--- a/app/src/main/res/layout/activity_them_cua_hang.xml
+++ b/app/src/main/res/layout/activity_them_cua_hang.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.ThemTinTucActivity">
+    tools:context=".activity.ThemCuaHangActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,21 +14,21 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:background="?android:attr/selectableItemBackground"
-            android:id="@+id/imgbackthemtintuc"
+            android:id="@+id/imgbackthemcuahang"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
+            android:background="?android:attr/selectableItemBackground"
             android:padding="12dp"
             android:src="@drawable/back" />
 
         <TextView
-            android:id="@+id/tvthemtintuc"
+            android:id="@+id/tvthemcuahang"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:padding="8dp"
-            android:text="Thêm tin tức"
+            android:text="Thêm cửa hàng"
             android:textAlignment="center"
             android:textColor="@color/colorBlack"
             android:textSize="20sp"
@@ -62,7 +62,7 @@
                     android:background="@drawable/custom_border_img">
 
                     <ImageView
-                        android:id="@+id/imgthemtintuc"
+                        android:id="@+id/imgthemcuahang"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="5dp"
@@ -79,33 +79,33 @@
                     android:padding="10dp">
 
                     <ImageView
-                        android:visibility="visible"
-                        android:id="@+id/imgcamerathemtintuc"
+                        android:id="@+id/imgcamerathemcuahang"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:background="?android:attr/selectableItemBackground"
-                        android:padding="10dp"
                         android:layout_marginRight="40dp"
-                        android:src="@drawable/ic_camera" />
-
-                    <ImageView
-                        android:visibility="gone"
-                        android:id="@+id/imguploadthemtintuc"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:padding="10dp"
                         android:background="?android:attr/selectableItemBackground"
-                        android:src="@drawable/ic_upload" />
+                        android:padding="10dp"
+                        android:src="@drawable/ic_camera"
+                        android:visibility="visible" />
 
                     <ImageView
-                        android:visibility="visible"
-                        android:id="@+id/imgfolderthemtintuc"
+                        android:id="@+id/imguploadthemcuahang"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:background="?android:attr/selectableItemBackground"
                         android:padding="10dp"
+                        android:src="@drawable/ic_upload"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/imgfolderthemcuahang"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_marginLeft="40dp"
-                        android:src="@drawable/ic_folder" />
+                        android:background="?android:attr/selectableItemBackground"
+                        android:padding="10dp"
+                        android:src="@drawable/ic_folder"
+                        android:visibility="visible" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -115,7 +115,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvluuythemtintuc"
+                    android:id="@+id/tvluuythemcuahang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -129,42 +129,85 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Tên tin tức"
+                    android:text="Tên cửa hàng"
                     android:textColor="@color/colorBlack"
                     android:textSize="15sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
+
                 <EditText
-                    android:id="@+id/edttenthemtintuc"
+                    android:id="@+id/edttenthemcuahang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@drawable/custom_border_img"
-                    android:maxLines="3"
                     android:inputType="text"
+                    android:maxLines="3"
                     android:padding="10dp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Nội dung tin tức"
+                    android:text="Địa chỉ cửa hàng"
                     android:textColor="@color/colorBlack"
                     android:textSize="15sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
+
                 <EditText
-                    android:id="@+id/edtnoidungthemtintuc"
+                    android:id="@+id/edtdiachithemcuahang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@drawable/custom_border_img"
-                    android:maxLines="10"
                     android:inputType="text"
+                    android:maxLines="3"
+                    android:padding="10dp"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="SĐT cửa hàng"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/edtsdtthemcuahang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/custom_border_img"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:padding="10dp"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Giờ mở cửa hàng"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/edtgiothemcuahang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/custom_border_img"
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:padding="10dp"
                     android:textSize="18sp" />
 
                 <info.hoang8f.widget.FButton
-                    android:id="@+id/btnthemtintuc"
+                    android:id="@+id/btnthemcuahang"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
